Reformat skills section

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -26,11 +26,15 @@
 \begin{rSection}{skills}
 \begin{tabular}{llll}
 
-$\bullet$ \textbf{Main Langs}    & C, C++17 (STL, Boost)       & $\bullet$ \textbf{DevOps Tools} & Docker, Vagrant, SaltStack \\
-$\bullet$ \textbf{Misc Langs}    & Bash, Python-3 (ML/DL libs) & $\bullet$ \textbf{OS, RTOS}     & WinAPI, POSIX, ThreadX \\
-$\bullet$ \textbf{Build Systems} & CMake, Make, Bazel          & $\bullet$ \textbf{CI/CD}        & Jenkins, TeamCity, TFS \\
-$\bullet$ \textbf{VCS, DVCS}     & Git, Perforce, Subversion   & $\bullet$ \textbf{SAST, DAST}   & Cppcheck, PVS-Studio, Clang-Tidy \\
-$\bullet$ \textbf{Frameworks}    & ROS, MQTT (Mosquitto), Qt   & $\bullet$ \textbf{Embedded}     & MCU (AVR), Schematic, Board Bring-up
+$\bullet$ \textbf{main languages}  & C++(17), C(99), Python(3),      & $\bullet$ \textbf{libraries}    & STL, Boost, OpenCV, Eigen, OpenSSL, Qt,       \\
+                                   & Bash, Assembler (8 bit)         &                                 & ROS(1), FlatBuffers, CAF (actor model)        \\
+$\bullet$ \textbf{build config}    & CMake, Make, Conan, Bazel,      & $\bullet$ \textbf{linux infra}  & systemd services, kernel modules (drivers),   \\
+                                   & Docker (Dev Containers, Cross)  &                                 & deb packages (CPack, debhelper), Buildroot    \\
+$\bullet$ \textbf{version control} & Git, Subversion (git-svn), DVC  & $\bullet$ \textbf{ci/cd}        & Jenkins, GitLab CI, Azure DevOps (TFS)        \\
+$\bullet$ \textbf{system design}   & GRASP, SOLID, GoF, Algorithms   & $\bullet$ \textbf{data science} & image classification (CNN, transfer learning) \\
+$\bullet$ \textbf{unit testing}    & Google Test, Catch, PyTest      & $\bullet$ \textbf{interfaces}   & UART (RS-232), SPI, I2C, CAN, GPIO            \\
+$\bullet$ \textbf{problem solving} & GDB, Valgrind, Strace, Ltrace,  & $\bullet$ \textbf{embedded}     & lab equipment, schematics, board bringup,     \\
+                                   & Sanitizers, Wireshark, Perf     &                                 & RTOS (Eclipse ThreadX), PLC (B\&R)
 
 \end{tabular}
 \end{rSection}
